--- a/catalogue.html
+++ b/catalogue.html
@@ -59,128 +59,124 @@
         </ul>
       </div>
 
-      <div class="catalogue-page-wrapper">
-        <div class="name-sorting-wrapper">
-          <p class="title filters-title">Фильтр:</p>
-          <div class="sorting">
-            <p class="title sorting-title">Сортировка:</p>
-            <div class="sort-types">
-              <a href="#">По цене</a>
-              <a href="#">По типу</a>
-              <a href="#">По популярности</a>
-            </div>
-
-            <ul class="sorting-direction">
-              <li><a href="#">По возрастанию</a></li>
-              <li><a href="#">По убыванию</a></li>
-            </ul>
+      <div class="catalogue-wrapper">
+        <section class="catalogue-filters">
+          <div class="filter-name">
+            <h2>Фильтр:</h2>
           </div>
-        </div>
 
-        <div class="catalogue-wrapper-bottom">
-          <section class="filters">
-            <h2 class="visually-hidden">Фильтр:</h2>
+          <form action="https://echo.htmlacademy.ru" method="get" class="filters">
+            <fieldset>
+              <legend>Стоимость</legend>
 
-            <div class="filter-body-wrapper">
-              <form action="https://echo.htmlacademy.ru" method="get" class="filters">
-                <fieldset>
-                  <legend>Стоимость</legend>
-
-                  <div class="price-range">
-                    <div class="price-scale"></div>
-                    <div class="toggle toggle-min"></div>
-                    <div class="toggle toggle-max"></div>
-                  </div>
-                  <label>от <input type="number" value="0" name="min-price"></label>
-                  <label>до <input type="number" value="5000" name="max-price"></label>
-                </fieldset>
-
-                <fieldset>
-                  <legend>Цвет</legend>
-                  <ul>
-                    <li><label><input type="checkbox" name="black" checked>Чёрный</label></li>
-                    <li><label><input type="checkbox" name="white">Белый</label></li>
-                    <li><label><input type="checkbox" name="blue" checked>Синий</label></li>
-                    <li><label><input type="checkbox" name="red" checked>Красный</label></li>
-                    <li><label><input type="checkbox" name="pink">Розовый</label></li>
-                  </ul>
-                </fieldset>
-
-                <fieldset>
-                  <legend>Bluetooth</legend>
-                  <ul>
-                    <li><label><input type="radio" name="bluetooth" checked>Есть</label></li>
-                    <li><label><input type="radio" name="bluetooth">Нет</label></li>
-                  </ul>
-                </fieldset>
-                <button type="submit" class="button">Показать</button>
-              </form>
-            </div>
-          </section>
-
-          <section class="catalogue">
-
-              <h2 class="visually-hidden">Товары категории</h2>
-
-              <ul class="catalogue-list">
-                <li class="catalogue-item">
-                  <img src="img/item1.jpg" alt="Изображение товара" width="360" height="380">
-                  <h3 class="title"><a href="#">Любительская селфи-палка</a></h3>
-                  <span class="catalogue-price">500 руб.</span>
-                  <!--<div class="catalogue-item-hidden">
-                    <a href="#" class="button">В корзину</a>
-                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-                  </div>-->
-                </li>
-
-                <li class="catalogue-item">
-                  <img src="img/item2.jpg" alt="Изображение товара" width="360" height="380">
-                  <h3 class="title"><a href="#">Профессиональная селфи-палка</a></h3>
-                  <span>1 500 руб.</span>
-                  <!--<div class="catalogue-item-hidden">
-                    <a href="#" class="button">В корзину</a>
-                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-                  </div>-->
-                </li>
-
-                <li class="catalogue-item">
-                  <img src="img/item3.jpg" alt="Изображение товара" width="360" height="380">
-                  <h3 class="title"><a href="#">Непотопляемая селфи-палка</a></h3>
-                  <span>2 500 руб.</span>
-                  <!--<div class="catalogue-item-hidden">
-                    <a href="#" class="button">В корзину</a>
-                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-                  </div>-->
-                </li>
-
-                <li class="catalogue-item">
-                  <img src="img/item4.jpg" alt="Изображение товара" width="360" height="380">
-                  <h3 class="title"><a href="#">Селфи-палка "Следуй за мной"</a></h3>
-                  <span>4 900 руб.</span>
-                  <!--<div class="catalogue-item-hidden">
-                    <a href="#" class="button">В корзину</a>
-                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-                  </div>-->
-                </li>
-              </ul>
-
-              <div class="catalogue-nav">
-                <p class="visually-hidden">Навигация по страницам каталога</p>
-                <a href="#" class="catalogue-nav-direction">Назад</a>
-
-                <ul class="catalogue-pages">
-                  <li class="page-number page-current"><a href="#"><span class="visually-hidden">Страница </span>1</a></li>
-                  <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>2</a></li>
-                  <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>3</a></li>
-                </ul>
-
-                <a href="#" class="catalogue-nav-direction">Вперед</a>
+              <div class="price-range">
+                <div class="price-scale"></div>
+                <div class="toggle toggle-min"></div>
+                <div class="toggle toggle-max"></div>
               </div>
+              <label>от <input type="number" value="0" name="min-price"></label>
+              <label>до <input type="number" value="5000" name="max-price"></label>
+            </fieldset>
+
+            <fieldset>
+              <legend>Цвет</legend>
+              <ul>
+                <li><label><input type="checkbox" name="black" checked>Чёрный</label></li>
+                <li><label><input type="checkbox" name="white">Белый</label></li>
+                <li><label><input type="checkbox" name="blue" checked>Синий</label></li>
+                <li><label><input type="checkbox" name="red" checked>Красный</label></li>
+                <li><label><input type="checkbox" name="pink">Розовый</label></li>
+              </ul>
+            </fieldset>
+
+            <fieldset>
+              <legend>Bluetooth</legend>
+              <ul>
+                <li><label><input type="radio" name="bluetooth" checked>Есть</label></li>
+                <li><label><input type="radio" name="bluetooth">Нет</label></li>
+              </ul>
+            </fieldset>
+            <button type="submit" class="button">Показать</button>
+          </form>
+        </section>
+
+        <section class="catalogue-display">
+
+          <h2 class="visually-hidden">Товары категории</h2>
+
+          <div class="sorting">
+            <div class="sorting-controls">
+              <p class="title sorting-title">Сортировка:</p>
+              <div class="sort-types">
+                <a href="#">По цене</a>
+                <a href="#">По типу</a>
+                <a href="#">По популярности</a>
+              </div>
+
+              <ul class="sorting-direction">
+                <li><a href="#">S<span class="visually-hidden">По возрастанию</span></a></li>
+                <li><a href="#">S<span class="visually-hidden">По убыванию</span></a></li>
+              </ul>
             </div>
-          </section>
-        </div>
+          </div>
+
+          <ul class="catalogue-list">
+            <li class="catalogue-item">
+              <img src="img/item1.jpg" alt="Изображение товара" width="360" height="380">
+              <h3 class="title"><a href="#">Любительская селфи-палка</a></h3>
+              <span class="catalogue-price">500 руб.</span>
+              <!--<div class="catalogue-item-hidden">
+                <a href="#" class="button">В корзину</a>
+                <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+              </div>-->
+            </li>
+
+            <li class="catalogue-item">
+              <img src="img/item2.jpg" alt="Изображение товара" width="360" height="380">
+              <h3 class="title"><a href="#">Профессиональная селфи-палка</a></h3>
+              <span>1 500 руб.</span>
+              <!--<div class="catalogue-item-hidden">
+                <a href="#" class="button">В корзину</a>
+                <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+              </div>-->
+            </li>
+
+            <li class="catalogue-item">
+              <img src="img/item3.jpg" alt="Изображение товара" width="360" height="380">
+              <h3 class="title"><a href="#">Непотопляемая селфи-палка</a></h3>
+              <span>2 500 руб.</span>
+              <!--<div class="catalogue-item-hidden">
+                <a href="#" class="button">В корзину</a>
+                <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+              </div>-->
+            </li>
+
+            <li class="catalogue-item">
+              <img src="img/item4.jpg" alt="Изображение товара" width="360" height="380">
+              <h3 class="title"><a href="#">Селфи-палка "Следуй за мной"</a></h3>
+              <span>4 900 руб.</span>
+              <!--<div class="catalogue-item-hidden">
+                <a href="#" class="button">В корзину</a>
+                <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+              </div>-->
+            </li>
+          </ul>
+
+          <div class="catalogue-nav">
+            <p class="visually-hidden">Навигация по страницам каталога</p>
+            <a href="#" class="catalogue-nav-direction">Назад</a>
+
+            <ul class="catalogue-pages">
+              <li class="page-number page-current"><a href="#"><span class="visually-hidden">Страница </span>1</a></li>
+              <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>2</a></li>
+              <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>3</a></li>
+            </ul>
+
+            <a href="#" class="catalogue-nav-direction">Вперед</a>
+          </div>
+        </section>
       </div>
-    </main>
+  </main>
 
     <footer>
       <div class="page-wrapper">
